web/app/themes/matheiken/assets/sass/components/_posts.scss
.post {
	font-size: 13px;
	line-height: 16px;

	&__sidebar,
	&__details > div {
		padding: 0 $gutter;
	}

	&__header,
	&__hero {
		padding: 0 $gutter;
		@include bp-min($col-width * 2) {
			display: flex;
		}
	}

	&__image {
		margin-bottom: $gutter;
	}

	&__images,
	&__details {
		display: flex;
		flex-wrap: wrap;
	}

	&__content {
		@include bp-min($col-width * 4 / .78) {
			flex: 0 0 $col-width * 2;
		}
	}

	.flex-expander {
		max-width: 100%;

		@include bp-min($col-width * 3) {  
			flex: 1 0 $col-width * 2;
		}
	}

	&__title {
		@include block-separator();
		margin-top: 0;
		font-size: 19px;
		line-height: 23px;
		font-weight: 900;
		margin-bottom: .5em;
	}

	&__subhead {
		font-weight: 700;
	}

	&__description {
		font-weight: 400;
		color: grey(60);
	}

	&__footer {
		padding-bottom: $gutter;
	}

	figure {
		margin-bottom: $gutter;

		&.half-width {
			width: calc(50% - .5em);
			float: left;
		}

		&.half-width + .half-width:nth-child(2n - 1) {
			margin-left: 1em;
		}
	}

	a.cta {
		font-weight: 700;
		text-decoration: none;
		@include arrow;
	}
}

